--- a/po/et.po
+++ b/po/et.po
@@ -1,24 +1,28 @@
 # translation of ibus.pot to Estonian
 # Estonian translation of ibus.
 # Copyright (C) 2008-2015 Peng Huang <shawn.p.huang@gmail.com>
+# Copyright (C) 2015-2022 Takao Fujiwara <takao.fujiwara1@gmail.com>
 # This file is distributed under the same license as the ibus package.
 #
 # Translators:
 # mihkel <turakas@gmail.com>, 2012
 # mihkel <turakas@gmail.com>, 2012
+# H A <contact+fedora@hen.ee>, 2022.
 msgid ""
 msgstr ""
 "Project-Id-Version: IBus\n"
 "Report-Msgid-Bugs-To: https://github.com/ibus/ibus/issues\n"
 "POT-Creation-Date: 2014-02-18 13:46+0900\n"
-"PO-Revision-Date: 2014-02-18 05:46+0000\n"
-"Last-Translator: mihkel <turakas@gmail.com>\n"
-"Language-Team: Estonian <trans-et@lists.fedoraproject.org>\n"
+"PO-Revision-Date: 2022-06-12 22:18+0000\n"
+"Last-Translator: H A <contact+fedora@hen.ee>\n"
+"Language-Team: Estonian <https://translate.fedoraproject.org/projects/ibus/"
+"ibus/et/>\n"
+"Language: et\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: et\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Plural-Forms: nplurals=2; plural=n != 1;\n"
+"X-Generator: Weblate 4.12.2\n"
 
 #: ../setup/setup.ui.h:1
 msgid "Horizontal"
@@ -70,7 +74,7 @@ msgstr ""
 
 #: ../setup/setup.ui.h:13
 msgid "Next input method:"
-msgstr "Järgmine sisestusmeetod."
+msgstr "Järgmine sisestusmeetod:"
 
 #: ../setup/setup.ui.h:14
 msgid "The shortcut keys for switching to previous input method in the list"
