po: Update translation (Turkish)
Update po/tr.po at 100.0%
https://translate.fedoraproject.org/projects/ibus/ibus/tr/

BUG=https://github.com/ibus/ibus/pull/2444

--- a/po/tr.po
+++ b/po/tr.po
@@ -1,6 +1,6 @@
 # Turkish translation of ibus.
 # Copyright (C) 2008-2015 Peng Huang <shawn.p.huang@gmail.com>
-# Copyright (C) 2015-2022 Takao Fujiwara <takao.fujiwara1@gmail.com>
+# Copyright (C) 2015-2023 Takao Fujiwara <takao.fujiwara1@gmail.com>
 # This file is distributed under the same license as the ibus package.
 #
 # Serdar Sağlam <teknomobil@msn.com>, 2019. #zanata
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: ibus 1.5.20\n"
 "Report-Msgid-Bugs-To: https://github.com/ibus/ibus/issues\n"
 "POT-Creation-Date: 2022-06-20 20:30+0900\n"
-"PO-Revision-Date: 2022-07-04 10:18+0000\n"
+"PO-Revision-Date: 2022-09-24 15:19+0000\n"
 "Last-Translator: Oğuz Ersen <oguz@ersen.moe>\n"
 "Language-Team: Turkish <https://translate.fedoraproject.org/projects/ibus/"
 "ibus/tr/>\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n>1);\n"
-"X-Generator: Weblate 4.13\n"
+"X-Generator: Weblate 4.14.1\n"
 
 #. Translators: Here “Preload” is a verb
 #: data/dconf/org.freedesktop.ibus.gschema.xml:11
@@ -3490,7 +3490,7 @@ msgstr "IBus, Linux/Unix için akıllı bir giriş veri yoludur."
 msgid "translator-credits"
 msgstr ""
 "Serdar Sağlam <teknomobil@yandex.com>\n"
-"Oğuz Ersen <oguzersen@protonmail.com>"
+"Oğuz Ersen <oguz@ersen.moe>"
 
 #: ui/gtk3/panel.vala:1268
 msgid "Preferences"
