po: Update translation (Korean)
Update po/ko.po at 100.0%
https://translate.fedoraproject.org/projects/ibus/ibus/ko/

po: Update translation (Japanese)

Update po/ja.po at 100.0%
https://translate.fedoraproject.org/projects/ibus/ibus/ja/

Should not add English "Tangsa" to msgstr yet since the null
msgstr is under consideration. Refer the comment line on the msgid.

BUG=https://github.com/ibus/ibus/pull/2444

--- a/po/ja.po
+++ b/po/ja.po
@@ -1,6 +1,6 @@
 # Japanese translation of ibus.
 # Copyright (C) 2008-2015 Peng Huang <shawn.p.huang@gmail.com>
-# Copyright (C) 2015-2022 Takao Fujiwara <takao.fujiwara1@gmail.com>
+# Copyright (C) 2015-2023 Takao Fujiwara <takao.fujiwara1@gmail.com>
 # This file is distributed under the same license as the ibus package.
 #
 # Translators:
@@ -14,13 +14,14 @@
 # carrotsoft <www.carrotsoft@gmail.com>, 2012
 # fujiwara <takao.fujiwara1@gmail.com>, 2015-2019. #zanata
 # simmon <simmon@nplob.com>, 2021.
+# 김인수 <simmon@nplob.com>, 2022.
 msgid ""
 msgstr ""
 "Project-Id-Version: ibus 1.5.20\n"
 "Report-Msgid-Bugs-To: https://github.com/ibus/ibus/issues\n"
 "POT-Creation-Date: 2022-07-20 14:02+0900\n"
-"PO-Revision-Date: 2022-07-20 14:26+0900\n"
-"Last-Translator: simmon <simmon@nplob.com>\n"
+"PO-Revision-Date: 2022-10-01 17:30+0000\n"
+"Last-Translator: 김인수 <simmon@nplob.com>\n"
 "Language-Team: Japanese <https://translate.fedoraproject.org/projects/ibus/"
 "ibus/ja/>\n"
 "Language: ja\n"
@@ -28,7 +29,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=1; plural=0;\n"
-"X-Generator: Weblate 4.7\n"
+"X-Generator: Weblate 4.14.1\n"
 
 #. Translators: Here “Preload” is a verb
 #: data/dconf/org.freedesktop.ibus.gschema.xml:11
@@ -1697,14 +1698,14 @@ msgstr "CJK の記号及び句読点"
 #. msgmerge -C gucharmap.po ibus.po ibus.pot
 #: src/ibusunicodegen.h:465
 msgid "Hiragana"
-msgstr "平仮名"
+msgstr "ひらがな"
 
 #. TRANSLATORS: You might refer the translations from gucharmap with
 #. the following command:
 #. msgmerge -C gucharmap.po ibus.po ibus.pot
 #: src/ibusunicodegen.h:469
 msgid "Katakana"
-msgstr "片仮名"
+msgstr "カタカナ"
 
 #. TRANSLATORS: You might refer the translations from gucharmap with
 #. the following command:
