po: Update translation (French)
Update po/fr.po at 100.0%
https://translate.fedoraproject.org/projects/ibus/ibus/fr/

BUG=https://github.com/ibus/ibus/pull/2444

--- a/po/fr.po
+++ b/po/fr.po
@@ -1,13 +1,13 @@
 # French translation of ibus.
 # Copyright (C) 2008-2015 Peng Huang <shawn.p.huang@gmail.com>
-# Copyright (C) 2015-2021 Takao Fujiwara <takao.fujiwara1@gmail.com>
+# Copyright (C) 2015-2023 Takao Fujiwara <takao.fujiwara1@gmail.com>
 # This file is distributed under the same license as the ibus package.
 #
 # Translators:
 # Charles-Antoine Couret <cacouret@wanadoo.fr>, 2009
 # dominique bribanick <chepioq@gmail.com>, 2011,2014
 # Jérôme Fenal <jfenal@gmail.com>, 2012-2013
-# Julien Humbert <julroy67@gmail.com>, 2009-2015, 2020, 2021.
+# Julien Humbert <julroy67@gmail.com>, 2009-2015, 2020, 2021, 2022.
 # Sam Friedmann <sam.friedmann@redhat.com>, 2010
 # Jean-Baptiste Holcroft <jean-baptiste@holcroft.fr>, 2016-2019, 2020.
 # José Fournier <jaaf64@zoraldia.com>, 2016, 2017. #zanata
@@ -20,7 +20,7 @@ msgstr ""
 "Project-Id-Version: ibus 1.5.20\n"
 "Report-Msgid-Bugs-To: https://github.com/ibus/ibus/issues\n"
 "POT-Creation-Date: 2020-12-11 16:21+0900\n"
-"PO-Revision-Date: 2021-02-16 10:40+0000\n"
+"PO-Revision-Date: 2022-11-09 11:19+0000\n"
 "Last-Translator: Julien Humbert <julroy67@gmail.com>\n"
 "Language-Team: French <https://translate.fedoraproject.org/projects/ibus/"
 "ibus/fr/>\n"
@@ -29,7 +29,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 4.4.2\n"
+"X-Generator: Weblate 4.14.2\n"
 
 #. Translators: Here “Preload” is a verb
 #: data/dconf/org.freedesktop.ibus.gschema.xml:11
@@ -331,7 +331,7 @@ msgstr ""
 
 #: data/dconf/org.freedesktop.ibus.gschema.xml:182
 msgid "Unicode shortcut keys for gtk_accelerator_parse"
-msgstr "Touches de raccourcis Unicodes pour gtk_accelerator_parse"
+msgstr "Touches de raccourcis Unicode pour gtk_accelerator_parse"
 
 #: data/dconf/org.freedesktop.ibus.gschema.xml:183
 msgid "The shortcut keys for turning Unicode typing on or off"
@@ -438,7 +438,7 @@ msgid ""
 "the beginning if false."
 msgstr ""
 "Charge les données relatives aux émoticônes au démarrage si la condition est "
-"remplie. 10Mb de mémoire sont nécessaires pour charger ces données. Sinon, "
+"remplie. 10 Mo de mémoire sont nécessaires pour charger ces données. Sinon, "
 "les données des émoticônes sont chargées lors de l’ouverture de la boite de "
 "dialogue des émoticônes."
 
@@ -453,8 +453,8 @@ msgid ""
 "the beginning if false. The Unicode data is always loaded after the emoji "
 "data is loaded even if true."
 msgstr ""
-"Charge les données Unicode au démarrage si la condition est remplie. 15Mb de "
-"mémoire sont nécessaires pour charger ces données. Sinon, les données "
+"Charge les données Unicode au démarrage si la condition est remplie. 15 Mo "
+"de mémoire sont nécessaires pour charger ces données. Sinon, les données "
 "Unicode sont chargées lors de l’ouverture de la boite de dialogue des "
 "émoticônes. Même dans le cas où la condition est remplie, les données "
 "Unicode sont toujours chargées après les données des émoticônes."
@@ -539,7 +539,7 @@ msgstr "Définir les préférences de IBus"
 
 #: setup/keyboardshortcut.py:55
 msgid "Keyboard shortcuts"
-msgstr "Raccourci clavier"
+msgstr "Raccourcis clavier"
 
 #: setup/keyboardshortcut.py:67
 msgid "Key code:"
@@ -741,7 +741,7 @@ msgstr "Paramètres généraux"
 
 #: setup/setup.ui:671
 msgid "Add the selected input method into the enabled input methods"
-msgstr "Ajouter la méthode d’entrée selectionnée aux méthodes d’entrée actives"
+msgstr "Ajouter la méthode d’entrée sélectionnée aux méthodes d’entrée actives"
 
 #: setup/setup.ui:682
 msgid "_Remove"
@@ -786,7 +786,7 @@ msgstr "_Préférences"
 
 #: setup/setup.ui:761
 msgid "Show setup of the selected input method"
-msgstr "Afficher le paramétrage de la méthode d’entrée sélectectionnée"
+msgstr "Afficher le paramétrage de la méthode d’entrée sélectionnée"
 
 #: setup/setup.ui:812
 msgid ""
@@ -1238,7 +1238,7 @@ msgstr "Runique"
 #. msgmerge -C gucharmap.po ibus.po ibus.pot
 #: src/ibusunicodegen.h:205
 msgid "Tagalog"
-msgstr "Runique"
+msgstr "Tagalog"
 
 #. TRANSLATORS: You might refer the translations from gucharmap with
 #. the following command:
@@ -1259,7 +1259,7 @@ msgstr "Buhid"
 #. msgmerge -C gucharmap.po ibus.po ibus.pot
 #: src/ibusunicodegen.h:217
 msgid "Tagbanwa"
-msgstr "Buhid"
+msgstr "Tagbanwa"
 
 #. TRANSLATORS: You might refer the translations from gucharmap with
 #. the following command:
@@ -2162,7 +2162,7 @@ msgstr "Permien"
 #. msgmerge -C gucharmap.po ibus.po ibus.pot
 #: src/ibusunicodegen.h:733
 msgid "Ugaritic"
-msgstr "Ougqritique"
+msgstr "Ougaritique"
 
 #. TRANSLATORS: You might refer the translations from gucharmap with
 #. the following command:
