--- a/po/ja.po
+++ b/po/ja.po
@@ -19,8 +19,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: ibus 1.5.20\n"
 "Report-Msgid-Bugs-To: https://github.com/ibus/ibus/issues\n"
-"POT-Creation-Date: 2023-07-27 00:14+0900\n"
-"PO-Revision-Date: 2023-07-27 23:31+0900\n"
+"POT-Creation-Date: 2023-08-02 00:14+0900\n"
+"PO-Revision-Date: 2023-08-02 07:31+0900\n"
 "Last-Translator: 김인수 <simmon@nplob.com>\n"
 "Language-Team: Japanese <https://translate.fedoraproject.org/projects/ibus/"
 "ibus/ja/>\n"
@@ -342,9 +342,9 @@ msgstr "候補ウィンドウ上で入力メソッドの言語でグリフを選
 
 #: data/dconf/org.freedesktop.ibus.gschema.xml:239
 msgid ""
-"Some code points have the different glyphs and Pango determines the glyphs "
+"Some code points have different glyphs and Pango determines the glyphs "
 "from the language attribute. Pango chooses glyphs from the IBus engine's "
-"language if the value is true and choose them from the desktop locale if the "
+"language if the value is true and chooses them from the desktop locale if the "
 "value is false."
 msgstr ""
 "いくつかのコードポイントは異なるグリフを持ち、Pango は言語属性からグリフを決"
