tools: Refactor ibus start/restart for Plasma Wayland
glib 2.72.4 does not support g_string_free_and_steal() in Ubuntu 22.04 yet.
Also merge codes of updating kwinrc for start and exit operations.

BUG=https://github.com/ibus/ibus/actions/runs/7866683491/job/21461283635

--- a/po/ibus10.pot
+++ b/po/ibus10.pot
@@ -3191,7 +3191,7 @@ msgstr ""
 
 #: tools/main.vala:527
 msgid ""
-"Start or restart daemon with \"direct\" or \"systemd\" or \"kde-wayland\", "
+"Start or restart daemon with \"direct\", \"systemd\" or \"kde-wayland\" "
 "TYPE."
 msgstr ""
 
